--- a/samples/Samples.csproj
+++ b/samples/Samples.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\Record.cs" />
     <Compile Include="Storage\Tape.cs" />
+    <Compile Include="Storage\TapeReader.cs" />
     <Compile Include="Storage\TapeWritter.cs" />
   </ItemGroup>
   <ItemGroup>
