--- a/src/Echo.csproj
+++ b/src/Echo.csproj
@@ -44,12 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentAssessor.cs" />
     <Compile Include="Core\ConsoleWritter.cs" />
-    <Compile Include="Core\LoggingInterceptor.cs" />
+    <Compile Include="Core\RecordingInterceptor.cs" />
+    <Compile Include="Core\ReplayingInterceptor.cs" />
+    <Compile Include="IInvocationReader.cs" />
     <Compile Include="IInvocationWritter.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Recorder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\RecordingInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
