--- a/samples/InstantReplay/InstantReplay.csproj
+++ b/samples/InstantReplay/InstantReplay.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D287953A-1C3D-48A7-8D16-5F4719F04D06}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Samples</RootNamespace>
-    <AssemblyName>Samples</AssemblyName>
+    <RootNamespace>Samples.InstantReplay</RootNamespace>
+    <AssemblyName>InstantReplay</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,7 +55,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Echo.csproj">
+    <ProjectReference Include="..\..\src\Echo.csproj">
       <Project>{8e46fe3b-5954-41e1-8d02-fe910c00327d}</Project>
       <Name>Echo</Name>
     </ProjectReference>
