--- a/src/Echo.UnitTests/Echo.UnitTests.csproj
+++ b/src/Echo.UnitTests/Echo.UnitTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Asserts\ExceptionAssert.cs" />
     <Compile Include="Fakes\FakeDependency.cs" />
     <Compile Include="Fakes\IFakeDependency.cs" />
+    <Compile Include="Fakes\IInternalFakeDependency.cs" />
     <Compile Include="RecorderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
