--- a/samples/RecordToFile/RecordToFile.csproj
+++ b/samples/RecordToFile/RecordToFile.csproj
@@ -55,12 +55,11 @@
     <None Include="bin\Debug\output.echo" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Echo.csproj">
+    <ProjectReference Include="..\..\src\Echo\Echo.csproj">
       <Project>{8e46fe3b-5954-41e1-8d02-fe910c00327d}</Project>
       <Name>Echo</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
