Add InvocationResult wrapper to encapsulate different kinds of return types: void, value, thrown exception

--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvocationResult.cs" />
     <Compile Include="Utilities\InvocationUtility.cs" />
     <Compile Include="Core\ConsoleWritter.cs" />
     <Compile Include="Core\RecordingInterceptor.cs" />
