Improve exception throw asserts in RecorderTests by asserting non-generic exception type Add handling for async methods that throw

--- a/src/Echo.UnitTests/Echo.UnitTests.csproj
+++ b/src/Echo.UnitTests/Echo.UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Asserts\ExceptionAssert.cs" />
     <Compile Include="Fakes\FakeDependency.cs" />
+    <Compile Include="Fakes\FakeDependencyException.cs" />
     <Compile Include="Fakes\IFakeDependency.cs" />
     <Compile Include="Fakes\IFakeDependencyAsync.cs" />
     <Compile Include="Fakes\IInternalFakeDependency.cs" />
