--- a/samples/InstantReplay/InstantReplay.csproj
+++ b/samples/InstantReplay/InstantReplay.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExternalPartner.cs" />
+    <Compile Include="ExternalDependency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\Record.cs" />
