--- a/samples/RecordToFile/RecordToFile.csproj
+++ b/samples/RecordToFile/RecordToFile.csproj
@@ -47,8 +47,7 @@
     <Compile Include="ExternalDependency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\InvocationLog.cs" />
-    <Compile Include="Storage\InvocationWriter.cs" />
+    <Compile Include="InvocationLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
