--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serialization\InvocationEntry.cs" />
+    <Compile Include="Core\InvocationWriter.cs" />
     <Compile Include="InvocationResult.cs" />
+    <Compile Include="IInvocationLogger.cs" />
     <Compile Include="Utilities\InvocationUtility.cs" />
     <Compile Include="Core\ConsoleWritter.cs" />
     <Compile Include="Core\RecordingInterceptor.cs" />
