--- a/samples/InstantReplay/InstantReplay.csproj
+++ b/samples/InstantReplay/InstantReplay.csproj
@@ -43,13 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntryReader.cs" />
+    <Compile Include="EntryWritter.cs" />
     <Compile Include="ExternalDependency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\Record.cs" />
-    <Compile Include="Storage\Tape.cs" />
-    <Compile Include="Storage\TapeReader.cs" />
-    <Compile Include="Storage\TapeWritter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
