--- a/samples/RecordToFile/RecordToFile.csproj
+++ b/samples/RecordToFile/RecordToFile.csproj
@@ -47,7 +47,7 @@
     <Compile Include="ExternalDependency.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InvocationLogger.cs" />
+    <Compile Include="InvocationWritter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
