Implement VerifyAll for TestPlayer - validates that all invocations were hit with prerecorded parameters

--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -46,7 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\InvocationReader.cs" />
-    <Compile Include="Core\NoRecordingFoundException.cs" />
+    <Compile Include="Core\NoEchoFoundException.cs" />
+    <Compile Include="UnitTesting\IValidationReader.cs" />
     <Compile Include="UnitTesting\TestEntry.cs" />
     <Compile Include="IEchoReader.cs" />
     <Compile Include="Serialization\InvocationEntry.cs" />
@@ -54,7 +55,10 @@
     <Compile Include="Core\InvocationResult.cs" />
     <Compile Include="IEchoWriter.cs" />
     <Compile Include="Serialization\InvocationResultType.cs" />
+    <Compile Include="UnitTesting\ValidationReader.cs" />
+    <Compile Include="UnitTesting\TestInvocation.cs" />
     <Compile Include="UnitTesting\TestPlayer.cs" />
+    <Compile Include="UnitTesting\ValidationFailedException.cs" />
     <Compile Include="Utilities\InvocationUtility.cs" />
     <Compile Include="Core\ConsoleWriter.cs" />
     <Compile Include="Core\RecordingInterceptor.cs" />
