--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -47,7 +47,6 @@
   <ItemGroup>
     <Compile Include="Core\InvocationReader.cs" />
     <Compile Include="Core\NoEchoFoundException.cs" />
-    <Compile Include="UnitTesting\IValidationReader.cs" />
     <Compile Include="UnitTesting\TestEntry.cs" />
     <Compile Include="IEchoReader.cs" />
     <Compile Include="Serialization\InvocationEntry.cs" />
@@ -55,10 +54,10 @@
     <Compile Include="Core\InvocationResult.cs" />
     <Compile Include="IEchoWriter.cs" />
     <Compile Include="Serialization\InvocationResultType.cs" />
-    <Compile Include="UnitTesting\ValidationReader.cs" />
     <Compile Include="UnitTesting\TestInvocation.cs" />
     <Compile Include="UnitTesting\TestPlayer.cs" />
     <Compile Include="UnitTesting\ValidationFailedException.cs" />
+    <Compile Include="UnitTesting\ValidatingListener.cs" />
     <Compile Include="Utilities\InvocationUtility.cs" />
     <Compile Include="Core\ConsoleWriter.cs" />
     <Compile Include="Core\RecordingInterceptor.cs" />
