Add intentionally broken implementation of IEndpoint and ensure it fails the captured test

--- a/src/Echo.IntegrationTests/Echo.IntegrationTests.csproj
+++ b/src/Echo.IntegrationTests/Echo.IntegrationTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="EchoWriter.cs" />
     <Compile Include="RecordingTests.cs" />
     <Compile Include="Source\Endpoint.cs" />
+    <Compile Include="Source\Endpoint_ChargesExtra.cs" />
     <Compile Include="Source\IBilling.cs" />
     <Compile Include="Source\IEndpoint.cs" />
     <Compile Include="Source\IProvider.cs" />
