Add a scenario in which IBilling fails, in which case it shouldn't call IProvisioning

--- a/samples/Demo.UnitTests/Demo.UnitTests.csproj
+++ b/samples/Demo.UnitTests/Demo.UnitTests.csproj
@@ -65,10 +65,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Echoes\ProvisioningFails.echo" />
+    <EmbeddedResource Include="Echoes\ProvisioningFails.echo" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Echoes\HappyCase.echo" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Echoes\BillingFails.echo" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
