--- a/src/Echo/project.json
+++ b/src/Echo/project.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "Castle.Core": "3.3.3",
-    "IFluentInterface": "2.0.3"
+    "IFluentInterface": "2.0.3",
+    "Newtonsoft.Json" : "9.0.1"
   },
   "frameworks": {
     "net452": { }
