--- a/src/Echo.IntegrationTests/project.json
+++ b/src/Echo.IntegrationTests/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
-    "Moq": "4.5.28"
+    "Moq": "4.5.28",
+    "xUnit": "2.1.0",
+    "xunit.runner.visualstudio": "2.2.0-beta4-build1194"
   },
   "frameworks": {
     "net452": {}
