Move test data classes to their corresponding files, rename them accordingly

--- a/samples/Demo.UnitTests/Demo.UnitTests.csproj
+++ b/samples/Demo.UnitTests/Demo.UnitTests.csproj
@@ -38,6 +38,8 @@
     <Compile Include="EchoReader.cs" />
     <Compile Include="EndpointTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchaseFailsTestData.cs" />
+    <Compile Include="PurchaseSucceedsTestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Echo\Echo.csproj">
