Update travis build definition to add verbosity to nuget restore

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: csharp
 solution: Echo.sln
+install:
+  - nuget # get version number
+  - nuget restore Echo.sln -Verbosity detailed
+  - nuget update Echo.sln -Verbosity detailed
