--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: Echo.sln
 before_install:
   - mkdir -p .nuget
-  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.4.4/NuGet.exe
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe
   - mono .nuget/nuget.exe # Output NuGet's version number
 install:
-  - mono .nuget/nuget.exe restore Echo.sln -Verbosity detailed
+  #- mono .nuget/nuget.exe restore Echo.sln -Verbosity detailed
