--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: csharp
 solution: Echo.sln
+before_install:
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe
+  - mono .nuget/nuget.exe # Output NuGet's version number
+install:
+  - .nuget/nuget.exe restore Echo.sln -Verbosity detailed
