--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: csharp
 solution: Echo.sln
 before_install:
   - mkdir -p .nuget
-  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe
-  - chmod a+x ./nuget/nuget.exe
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.3.0/NuGet.exe
+  - chmod a+x .nuget/nuget.exe
 install:
   - .nuget/nuget.exe restore Echo.sln -Verbosity detailed
