--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
   - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/v3.5.0/NuGet.exe
 install:
   #- mono .nuget/nuget.exe restore Echo.sln -Verbosity detailed
-  - .nuget/nuget.exe install Castle.Core -Version 3.3.3
-  - .nuget/nuget.exe install Moq -Version 4.5.30
+  - mono .nuget/nuget.exe install Castle.Core -Version 3.3.3
+  - mono .nuget/nuget.exe install Newtonsoft.Json -Version 9.0.1
+  - mono .nuget/nuget.exe install Moq -Version 4.5.28
