Adding caching interceptor capability

--- a/src/Echo.UnitTests/Echo.UnitTests.csproj
+++ b/src/Echo.UnitTests/Echo.UnitTests.csproj
@@ -36,6 +36,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\CachingProviderTests.cs" />
+    <Compile Include="Caching\FakeAttribute.cs" />
+    <Compile Include="Caching\IFakeTarget.cs" />
     <Compile Include="Fakes\FakeTarget.cs" />
     <Compile Include="Fakes\FakeTargetException.cs" />
     <Compile Include="Fakes\IFakeTarget.cs" />
