--- a/src/Echo.IntegrationTests/Echo.IntegrationTests.csproj
+++ b/src/Echo.IntegrationTests/Echo.IntegrationTests.csproj
@@ -1,80 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F560BF10-BA75-430E-A59B-CDA343AFF9C5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Echo.IntegrationTests</RootNamespace>
-    <AssemblyName>Echo.IntegrationTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <TestProjectType>UnitTest</TestProjectType>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <None Remove="Echoes\*" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EchoReader.cs" />
-    <Compile Include="EchoWriter.cs" />
-    <Compile Include="RecordingTests.cs" />
-    <Compile Include="Source\Endpoint.cs" />
-    <Compile Include="Source\Endpoint_ChargesExtra.cs" />
-    <Compile Include="Source\IBilling.cs" />
-    <Compile Include="Source\IEndpoint.cs" />
-    <Compile Include="Source\IProvider.cs" />
-    <Compile Include="Source\PaymentInstrument.cs" />
-    <Compile Include="Source\PaymentRequest.cs" />
-    <Compile Include="Source\PaymentResponse.cs" />
-    <Compile Include="Source\ProvisioningRequest.cs" />
-    <Compile Include="Source\ProvisioningResponse.cs" />
-    <Compile Include="Source\PurchaseRequest.cs" />
-    <Compile Include="Source\PurchaseResponse.cs" />
-    <Compile Include="Source\QuoteRequest.cs" />
-    <Compile Include="Source\QuoteResponse.cs" />
-    <Compile Include="Source\ServiceType.cs" />
-    <Compile Include="Source\User.cs" />
-    <Compile Include="EndpointTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Echoes\*" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Echoes\output1.echo" />
+    <PackageReference Include="Moq" Version="4.5.28" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Echo\Echo.csproj">
-      <Project>{8e46fe3b-5954-41e1-8d02-fe910c00327d}</Project>
-      <Name>Echo</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Echo\Echo.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="project.json" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
