--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -1,87 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E46FE3B-5954-41E1-8D02-FE910C00327D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Echo</RootNamespace>
-    <AssemblyName>Echo</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>net45</TargetFramework>
+    <Description>Record your code's execution and replay them in a test</Description>
+    <Version>0.1.3</Version>
+    <Product>Echo: record and replay</Product>
+    <Authors>Daulet Zhanguzin</Authors>
+    <Company>Daulet Zhanguzin</Company>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
+    <PackageReference Include="Castle.Core" Version="3.3.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="6.0.4" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Caching\CachedAttribute.cs" />
-    <Compile Include="Caching\CachingInterceptor.cs" />
-    <Compile Include="Caching\CachingProvider.cs" />
-    <Compile Include="Caching\ICacheProvider.cs" />
-    <Compile Include="Core\InstancePool.cs" />
-    <Compile Include="Core\InvocationArgument.cs" />
-    <Compile Include="Core\InvocationDeserializer.cs" />
-    <Compile Include="Core\InvocationInputEqualityComparer.cs" />
-    <Compile Include="Core\NoEchoFoundException.cs" />
-    <Compile Include="Logging\DebugLogger.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\MultiLogger.cs" />
-    <Compile Include="Logging\ReleaseLogger.cs" />
-    <Compile Include="Restriction\RestrictedAttribute.cs" />
-    <Compile Include="Restriction\RestrictingInterceptor.cs" />
-    <Compile Include="Restriction\RestrictingProvider.cs" />
-    <Compile Include="UnitTesting\TestEntry.cs" />
-    <Compile Include="IEchoReader.cs" />
-    <Compile Include="Serialization\InvocationEntry.cs" />
-    <Compile Include="Core\InvocationSerializer.cs" />
-    <Compile Include="Core\InvocationResult.cs" />
-    <Compile Include="IEchoWriter.cs" />
-    <Compile Include="Serialization\InvocationResultType.cs" />
-    <Compile Include="Core\Invocation.cs" />
-    <Compile Include="UnitTesting\TestPlayer.cs" />
-    <Compile Include="UnitTesting\EchoVerificationException.cs" />
-    <Compile Include="UnitTesting\ValidatingListener.cs" />
-    <Compile Include="Utilities\InvocationUtility.cs" />
-    <Compile Include="Core\LoggingListener.cs" />
-    <Compile Include="Core\ListeningInterceptor.cs" />
-    <Compile Include="Core\ReplayingInterceptor.cs" />
-    <Compile Include="Core\IInvocationReader.cs" />
-    <Compile Include="Core\IInvocationListener.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="Recorder.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="project.json" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
