--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -1,11 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
-    <Description>Record your code's execution and replay them in a test</Description>
+    <Description>Record your code's execution and replay it later</Description>
     <Version>0.1.3</Version>
     <Product>Echo: record and replay</Product>
     <Authors>Daulet Zhanguzin</Authors>
     <Company>Daulet Zhanguzin</Company>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Copyright>Copyright (c) Daulet Zhanguzin</Copyright>
+    <PackageLicenseUrl>https://opensource.org/licenses/BSD-3-Clause</PackageLicenseUrl>
+    <PackageTags>echo recording moching mocks unittest unittesting</PackageTags>
+    <PackageReleaseNotes>
+Version 0.1
+
+* Initial release, minimum viable functionality
+    </PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/daulet/Echo</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/daulet/Echo</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="3.3.3" />
