--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
+    <DebugType>Full</DebugType>
+    <RunCodeAnalysis>True</RunCodeAnalysis>
+    <CodeAnalysisTreatWarningsAsErrors>True</CodeAnalysisTreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Record your code's execution and replay it later</Description>
     <Version>0.1.3</Version>
     <Product>Echo: record and replay</Product>
     <Authors>Daulet Zhanguzin</Authors>
     <Company>Daulet Zhanguzin</Company>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Copyright>Copyright (c) Daulet Zhanguzin</Copyright>
     <PackageLicenseUrl>https://opensource.org/licenses/BSD-3-Clause</PackageLicenseUrl>
     <PackageTags>echo recording moching mocks unittest unittesting</PackageTags>
@@ -20,6 +25,7 @@ Version 0.1
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="3.3.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="1.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="6.0.4" />
   </ItemGroup>
   <ItemGroup>
