--- a/test/Echo.UnitTests/Echo.UnitTests.csproj
+++ b/test/Echo.UnitTests/Echo.UnitTests.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>../../Echo.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>true</DelaySign>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.5.28" />
