Resolve issues around testing delay signed assemblies, instead only sign if "Sign" parameter is passed

--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -5,6 +5,8 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <RunCodeAnalysis>True</RunCodeAnalysis>
     <CodeAnalysisTreatWarningsAsErrors>True</CodeAnalysisTreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Sign'">
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../../Echo.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
@@ -35,5 +37,8 @@ Version 0.1
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.Extensions" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)' == 'Sign'">
+    <Compile Remove="Properties/AssemblyInfo.cs" />
   </ItemGroup>
 </Project>
