--- a/test/Echo.UnitTests/Echo.UnitTests.csproj
+++ b/test/Echo.UnitTests/Echo.UnitTests.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.5.28" />
     <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.console" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
