--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -8,13 +8,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Sign'">
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>../../Echo.snk</AssemblyOriginatorKeyFile>
-    <DelaySign>true</DelaySign>
+    <AssemblyOriginatorKeyFile>../../../vault/assets/echo/Echo.Identity.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Echo</Title>
     <Description>Record your code's execution and replay it later</Description>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <Product>Echo: record and replay</Product>
     <Authors>Daulet Zhanguzin</Authors>
     <Company>Daulet Zhanguzin</Company>
