--- a/sample/InstantReplay/InstantReplay.csproj
+++ b/sample/InstantReplay/InstantReplay.csproj
@@ -6,6 +6,6 @@
     <RootNamespace>Echo.Sample.InstantReplay</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Echo\Echo.csproj" />
+    <PackageReference Include="Echo" Version="0.1.4" />
   </ItemGroup>
 </Project>
