--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -31,7 +31,9 @@ Version 0.1
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="3.3.3" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="1.3.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="1.3.2">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="6.0.4" />
   </ItemGroup>
   <ItemGroup>
