--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{build}'
 image: Visual Studio 2017
 
 before_build:
-    - cmd: nuget restore Echo.sln
+    - ps: script\restore.ps1
 
 build:
     project: Echo.sln
